# psxrallyproject

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  PSXRP.cue  Thumbs.db  assetbundle  buildpc.sh  buildpsx.sh  convertModel copy.py  convertmodel.py  cube.mtl  cube.obj.mdl  makeassets.py  rally.xml  spicycube.mtl  testbundle.py
assets/: car.vram  cube.mtl  font.json  font.vram  impreza.mtl  impreza.vram  system.cnf  vertex.glsl
assets/.sourcefiles/impreza/: impreza.blend
assets/cars/impreza555/: impreza555.mtl  impreza555.vram
assets/cascube/: cas2.vram  cas3.vram  cas5.vram  cas6.vram  cascube.blend  cascube.mtl  cascube.texdata
assets/sourcefiles/impreza/: impreza.blend  impreza.blend1  impreza.xcf
assets/spicycube/: spicycube.mtl  spicycube.texdata  texture.vram
cmake/: toolchain.cmake  tools.cmake
src/: app.h  app.hpp  assetmanager.hpp  cdrom.cpp  cdrom.hpp  constants.hpp  fixed.hpp  gpu.cpp  gpu.h  gpu.hpp  gte.cpp  gte.h  gte.hpp  main.cpp  main.h  scene.cpp  system.c  system.h  timer.cpp  timer.hpp  trig.cpp  trig.h  trig.hpp  unhandledexc.c
src/commonlib/libc/: crt0.c  malloc.c  stdlib.h
src/commonlib/ps1/: cop0.h  gte.h  system.c  system.h  system.s  unhandledexc.c
src/engine/: assetmanager.cpp  assetmanager.hpp  audio.cpp  audio.hpp  common.cpp  common.hpp  constants.hpp  filesystem.cpp  filesystem.hpp  hash.hpp  object.cpp  object.hpp  physics.cpp  physics.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  templates.hpp  timer.cpp  timer.hpp  trig.cpp  trig.hpp
src/engine/fs/: file.cpp  file.hpp  host.cpp  host.hpp
src/engine/generic/: chronotimer.cpp  genericfilesystem.cpp  glrenderer.cpp
src/engine/generic/glad/include/glad/: glad.h
src/engine/generic/glad/src/: glad.c
src/engine/psx/: cd.cpp  cd.hpp  gte.cpp  gte.hpp  irq.cpp  irq.hpp  psxfilesystem.cpp  psxrenderer.cpp  psxtexture.hpp  psxtimer.cpp  timer.cpp  timer.hpp
src/pc/: glad.c  gpugl.cpp  gpugl.hpp
src/psx/: gpupsx.cpp  gpupsx.hpp
src/scenes/: game.cpp  game.hpp  test.cpp  test.hpp
tools/: common.py  convertFont.py  convertImage.py  convertModel.py  makeBundle.py
